--- a/week_1/grpc/Makefile
+++ b/week_1/grpc/Makefile
@@ -20,3 +20,12 @@ generate-note-api:
 	--go-grpc_out=pkg/note_v1 --go-grpc_opt=paths=source_relative \
 	--plugin=protoc-gen-go-grpc=bin/protoc-gen-go-grpc \
 	api/note_v1/note.proto
+
+generate-auth-api:
+	mkdir -p pkg/auth_v1
+	protoc --proto_path api/auth_v1 \
+    	--go_out=pkg/auth_v1 --go_opt=paths=source_relative \
+    	--plugin=protoc-gen-go=bin/protoc-gen-go \
+    	--go-grpc_out=pkg/auth_v1 --go-grpc_opt=paths=source_relative \
+    	--plugin=protoc-gen-go-grpc=bin/protoc-gen-go-grpc \
+    	api/auth_v1/auth.proto
